[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Levels/BaseLevel.gd" type="Script" id=1]
[ext_resource path="res://src/Shared/Hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Shared/StarBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Shared/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/wav/fire.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/wav/sawsquarenoise - Title Screen.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 300 )

[node name="BaseLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="Hud" parent="." instance=ExtResource( 2 )]

[node name="StarBackground" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
health = 100
max_velocity_orthogonal = 800.0
acceleration = 200.0
deceleration = 200.0

[node name="PlayerArea" type="Area2D" parent="."]

[node name="PlayerAreaShape" type="CollisionShape2D" parent="PlayerArea"]
shape = SubResource( 1 )

[node name="FireSoundStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="BackgroundMusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="health_changed" from="Player" to="." method="_on_Player_health_changed"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_PlayerArea_body_entered"]
